# wrapper_prototype

./: .gitignore  CMakeLists.txt  README.md
usercode/: CMakeLists.txt  main.c
usercode/dycore_example/: Dycore.cpp  Dycore.h  DycoreWrapper.cpp  DycoreWrapper.h  dycore.h  dycore_helper.h  dycore_init.cpp  dycore_init.h  main.c  main.f90
usercode/simple_example/: init_simple_wrapper.cpp  main.c  my_simple_wrapper.cpp  my_simple_wrapper.h
wrapper/: CMakeLists.txt
wrapper/include/: init_simple_wrapper.h  simple_wrapper.h  wrappable.h  wrapper_functions.h  wrapper_handler.h  wrapper_map.hpp
wrapper/src/: wrapper_functions.cpp  wrapper_functions.f90
